--- a/src/deploy/kubernetes/auth/base/ingress.yaml
+++ b/src/deploy/kubernetes/auth/base/ingress.yaml
@@ -4,13 +4,11 @@ metadata:
   annotations:
     kubernetes.io/ingress.class: nginx
     kubernetes.io/tls-acme: "true"
-    nginx.ingress.kubernetes.io/proxy-read-timeout: "3600"
-    nginx.ingress.kubernetes.io/proxy-send-timeout: "3600"
     nginx.ingress.kubernetes.io/ssl-redirect: "true"
   labels:
-    app.kubernetes.io/name: controller
-    app.kubernetes.io/component: controller
-  name: controller
+    app.kubernetes.io/name: auth
+    app.kubernetes.io/component: iam
+  name: auth
 spec:
   rules:
     - host: localhost
@@ -20,10 +18,10 @@ spec:
             path: /
             backend:
               service:
-                name: controller
+                name: auth
                 port:
                   number: 80
   tls:
     - hosts:
         - localhost
-      secretName: controller-certs
+      secretName: auth-certs
