--- a/src/deploy/kubernetes/auth/base/kustomization.yaml
+++ b/src/deploy/kubernetes/auth/base/kustomization.yaml
@@ -2,7 +2,6 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 
 resources:
-  - ../../auth/base
-  - ../../postgres/base
-  - controller
-  - worker
+  - service.yaml
+  - deployment.yaml
+  - ingress.yaml
