--- a/src/deploy/kubernetes/postgres/base/service.yaml
+++ b/src/deploy/kubernetes/postgres/base/service.yaml
@@ -2,9 +2,13 @@ apiVersion: v1
 kind: Service
 metadata:
   name: postgres
+  labels:
+    app.kubernetes.io/name: postgres
+    app.kubernetes.io/component: database
 spec:
-  selector: 
-    app: postgres
+  selector:
+    app.kubernetes.io/name: postgres
+    app.kubernetes.io/component: database
   ports:
     - port: 5432
       targetPort: 5432
