--- a/src/deploy/kubernetes/split/base/controller/deployment.yaml
+++ b/src/deploy/kubernetes/split/base/controller/deployment.yaml
@@ -2,6 +2,9 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: controller
+  labels:
+    app.kubernetes.io/name: controller
+    app.kubernetes.io/component: controller
 spec:
   replicas: 1
   strategy:
@@ -9,16 +12,17 @@ spec:
   selector:
     matchLabels:
       app.kubernetes.io/name: controller
+      app.kubernetes.io/component: controller
   template:
     metadata:
       labels:
         app.kubernetes.io/name: controller
-        app.kubernetes.io/component: service
+        app.kubernetes.io/component: controller
     spec:
       imagePullSecrets:
         - name: docker.first8.nl
       containers:
-        - name: moj
+        - name: controller
           imagePullPolicy: Always
           image: docker.first8.nl/moj/moj-controller:17
           resources:
@@ -30,7 +34,27 @@ spec:
               cpu: "500m"
           env:
             - name: "OIDC_ISSUER_URI"
-              value: "http://auth/realms/moj"
+              valueFrom:
+                configMapKeyRef:
+                  name: moj-environment
+                  key: oidc-issuer-uri
+#            - name: SPRING_DATASOURCE_URL
+#              valueFrom:
+#                configMapKeyRef:
+#                  key: controller-db-jdbc
+#                  name: moj-environment
+#            - name: SPRING_DATASOURCE_USERNAME
+#              valueFrom:
+#                configMapKeyRef:
+#                  key: controller-db-username
+#                  name: moj-environment
+#            - name: SPRING_DATASOURCE_PASSWORD
+#              valueFrom:
+#                configMapKeyRef:
+#                  key: controller-db-password
+#                  name: moj-environment
+#            - name: SPRING_DATASOURCE_DRIVERCLASSNAME
+#              value: org.postgresql.Driver
           ports:
             - containerPort: 8080
 # health checks
