--- a/src/deploy/kubernetes/split/base/controller/service.yaml
+++ b/src/deploy/kubernetes/split/base/controller/service.yaml
@@ -2,9 +2,13 @@ apiVersion: v1
 kind: Service
 metadata:
   name: controller
+  labels:
+    app.kubernetes.io/name: controller
+    app.kubernetes.io/component: controller
 spec:
   selector:
     app.kubernetes.io/name: controller
+    app.kubernetes.io/component: controller
   ports:
-    - port: 8080
+    - port: 80
       targetPort: 8080
