--- a/src/deploy/kubernetes/split/overlays/cloud-template/kustomization.yaml
+++ b/src/deploy/kubernetes/split/overlays/cloud-template/kustomization.yaml
@@ -3,14 +3,22 @@ kind: Kustomization
 
 resources:
   - ../../base
-  - postgres-credentials.yaml
 
-patchesJson6902:
-  - target:
-      kind: Ingress
-      name: controller
-      version: networking.k8s.io/v1
-    path: patch-ingress-controller.yaml
+configMapGenerator:
+  - name: moj-environment
+    files:
+      - realm-mastersofjava.json
+    envs:
+      - moj.properties
+
+secretGenerator:
+  - name: moj-credentials
+    envs:
+      - credentials.properties
+
+replacements:
+  - path: controller-fqdn-replacement.yaml
+  - path: auth-fqdn-replacement.yaml
 
 commonLabels:
   app.kubernetes.io/part-of: mastersofjava
