--- a/src/deploy/helm/charts/controller/values.yaml
+++ b/src/deploy/helm/charts/controller/values.yaml
@@ -1,20 +1,25 @@
-# Default values for iam.
+# Default values for controller.
 # This is a YAML-formatted file.
 # Declare variables to be passed into your templates.
 
 replicaCount: 1
 
 image:
-  repository: quay.io/keycloak/keycloak
+  repository: docker.first8.nl/moj/moj-controller
   pullPolicy: Always
   # Overrides the image tag whose default is the chart appVersion.
-  tag: "21.1"
+  tag: "17"
 
-imagePullSecrets: []
+imagePullSecrets:
+  - name: docker.first8.nl
 
 serviceAccount:
+  # Specifies whether a service account should be created
   create: true
+  # Annotations to add to the service account
   annotations: {}
+  # The name of the service account to use.
+  # If not set and create is true, a name is generated using the fullname template
   name: ""
 
 podAnnotations: {}
@@ -33,6 +38,12 @@ securityContext: {}
 service:
   type: ClusterIP
   port: 8080
+  queuePort: 61616
+
+oidc:
+  host: auth.local
+  tls:
+    enabled: false
 
 ingress:
   enabled: true
@@ -40,29 +51,19 @@ ingress:
   annotations:
     kubernetes.io/tls-acme: "true"
     nginx.ingress.kubernetes.io/ssl-redirect: "true"
-  host: iam.local
+    nginx.ingress.kubernetes.io/proxy-read-timeout: "3600"
+    nginx.ingress.kubernetes.io/proxy-send-timeout: "3600"
+  host: controller.local
   tls:
     enabled: false
 
-storage:
-  external:
-    enabled: false
-    type:
-
-
 resources:
-   limits:
-     cpu: 1000m
-     memory: 1Gi
-   requests:
-     cpu: 500m
-     memory: 512Mi
-
-admin:
-  # defaults to 'keycloak'
-  username:
-  # defaults to 'keycloak'
-  password:
+  limits:
+    memory: 2Gi
+    cpu: 1000m
+  requests:
+    memory: 1Gi
+    cpu: 500m
 
 nodeSelector: {}
 
