--- a/src/deploy/helm/charts/postgres/templates/serviceaccount.yaml
+++ b/src/deploy/helm/charts/postgres/templates/serviceaccount.yaml
@@ -1,12 +1,14 @@
+{{- if $.Values.global.postgres.enabled -}}
 {{- if .Values.serviceAccount.create -}}
 apiVersion: v1
 kind: ServiceAccount
 metadata:
-  name: {{ include "db.serviceAccountName" . }}
+  name: {{ include "postgres.serviceAccountName" . }}
   labels:
-    {{- include "db.labels" . | nindent 4 }}
+    {{- include "postgres.labels" . | nindent 4 }}
   {{- with .Values.serviceAccount.annotations }}
   annotations:
     {{- toYaml . | nindent 4 }}
   {{- end }}
 {{- end }}
+  {{- end }}
