--- a/src/deploy/helm/charts/worker/templates/service.yaml
+++ b/src/deploy/helm/charts/worker/templates/service.yaml
@@ -1,9 +1,9 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: {{ include "db.fullname" . }}
+  name: {{ include "worker.fullname" . }}
   labels:
-    {{- include "db.labels" . | nindent 4 }}
+    {{- include "worker.labels" . | nindent 4 }}
 spec:
   type: {{ .Values.service.type }}
   ports:
@@ -12,4 +12,4 @@ spec:
       protocol: TCP
       name: http
   selector:
-    {{- include "db.selectorLabels" . | nindent 4 }}
+    {{- include "worker.selectorLabels" . | nindent 4 }}
