--- a/src/deploy/helm/charts/iam/templates/secrets.yaml
+++ b/src/deploy/helm/charts/iam/templates/secrets.yaml
@@ -8,5 +8,5 @@ type: Opaque
 data:
   admin_username: {{ .Values.admin.username | default "keycloak" | b64enc }}
   admin_password: {{ .Values.admin.password | default "keycloak" | b64enc }}
-  db_username: {{ .Values.global.postgres.databases.iam.username | default "keycloak" | b64enc }}
-  db_password: {{ .Values.global.postgres.databases.iam.password | default "keycloak" | b64enc }}
+  db_username: {{ .Values.global.iam.database.username | default "iam" | b64enc }}
+  db_password: {{ .Values.global.iam.database.password | default "iam" | b64enc }}
