--- a/src/deploy/helm/charts/postgres/templates/secrets.yaml
+++ b/src/deploy/helm/charts/postgres/templates/secrets.yaml
@@ -9,7 +9,7 @@ type: Opaque
 data:
   username: {{ .Values.admin.username | default "postgres" | b64enc }}
   password: {{ .Values.admin.password | default "postgres" | b64enc }}
-  {{- if $.Values.global.postgres.enabled }}
-  databases: {{ include "postgres.datatbases" . | b64enc }}
+  {{- if eq "true" (include "postgres.haveDatabases" .) }}
+  databases: {{ include "postgres.databases" . | b64enc }}
   {{- end }}
 {{- end }}
