--- a/src/deploy/helm/charts/postgres/templates/service.yaml
+++ b/src/deploy/helm/charts/postgres/templates/service.yaml
@@ -6,9 +6,9 @@ metadata:
   labels:
     {{- include "postgres.labels" . | nindent 4 }}
 spec:
-  type: {{ .Values.service.type }}
+  type: ClusterIP
   ports:
-    - port: {{ include "postgres.service.port" . }}
+    - port: 5432
       targetPort: 5432
       protocol: TCP
       name: http
