--- a/src/deploy/helm/charts/postgres/values.yaml
+++ b/src/deploy/helm/charts/postgres/values.yaml
@@ -37,6 +37,10 @@ admin:
   password:
 
 databases: []
+# remove [] and uncomment below to add one or more databases on standalone sub-chart deployment.
+#  - name:
+#    username:
+#    password:
 
 podAnnotations: {}
 
@@ -50,10 +54,6 @@ securityContext: {}
   # readOnlyRootFilesystem: true
   # runAsNonRoot: true
   # runAsUser: 1000
-
-service:
-  type: ClusterIP
-  port: 5432
 
 resources:
   limits:
