--- a/src/deploy/helm/charts/worker/values.yaml
+++ b/src/deploy/helm/charts/worker/values.yaml
@@ -48,7 +48,7 @@ resources:
     cpu: "500m"
 
 autoscaling:
-  enabled: false
+  enabled: true
   minReplicas: 3
   maxReplicas: 6
   targetCPUUtilizationPercentage: 80
