--- a/src/deploy/helm/charts/controller/templates/deployment.yaml
+++ b/src/deploy/helm/charts/controller/templates/deployment.yaml
@@ -33,7 +33,7 @@ spec:
           imagePullPolicy: {{ .Values.image.pullPolicy }}
           ports:
             - name: http
-              containerPort: {{ .Values.service.port }}
+              containerPort: 8080
               protocol: TCP
             - name: activemq
               containerPort: 61616
