--- a/src/deploy/helm/charts/iam/values.yaml
+++ b/src/deploy/helm/charts/iam/values.yaml
@@ -2,6 +2,18 @@
 # This is a YAML-formatted file.
 # Declare variables to be passed into your templates.
 
+global:
+  iam:
+    database:
+      name:
+      username:
+      password:
+    ingress:
+      enabled: true
+      host: iam.local
+      tls:
+        enabled: false
+
 replicaCount: 1
 
 image:
@@ -30,26 +42,6 @@ securityContext: {}
   # runAsNonRoot: true
   # runAsUser: 1000
 
-service:
-  type: ClusterIP
-  port: 8080
-
-ingress:
-  enabled: true
-  className: nginx
-  annotations:
-    kubernetes.io/tls-acme: "true"
-    nginx.ingress.kubernetes.io/ssl-redirect: "true"
-  host: iam.local
-  tls:
-    enabled: false
-
-storage:
-  external:
-    enabled: false
-    type:
-
-
 resources:
    limits:
      cpu: 1000m
@@ -57,6 +49,12 @@ resources:
    requests:
      cpu: 500m
      memory: 512Mi
+
+ingress:
+  className: nginx
+  annotations:
+    kubernetes.io/tls-acme: "true"
+    nginx.ingress.kubernetes.io/ssl-redirect: "true"
 
 admin:
   # defaults to 'keycloak'
