--- a/src/deploy/helm/charts/worker/templates/deployment.yaml
+++ b/src/deploy/helm/charts/worker/templates/deployment.yaml
@@ -33,6 +33,11 @@ spec:
             {{- toYaml .Values.securityContext | nindent 12 }}
           image: "{{ .Values.image.repository }}:{{ .Values.image.tag | default .Chart.AppVersion }}"
           imagePullPolicy: {{ .Values.image.pullPolicy }}
+          env:
+            - name: "CONTROLLER_URI"
+              value: {{ include "worker.controller.http.uri" . }}
+            - name: "CONTROLLER_BROKER_URI"
+              value: {{ include "worker.controller.broker.uri" . }}
           resources:
             {{- toYaml .Values.resources | nindent 12 }}
       {{- with .Values.nodeSelector }}
