--- a/src/deploy/helm/charts/worker/values.yaml
+++ b/src/deploy/helm/charts/worker/values.yaml
@@ -2,7 +2,7 @@
 # This is a YAML-formatted file.
 # Declare variables to be passed into your templates.
 
-replicaCount: 1
+replicaCount: 3
 
 image:
   repository: docker.first8.nl/moj/moj-worker
@@ -48,7 +48,7 @@ resources:
     cpu: "500m"
 
 autoscaling:
-  enabled: true
+  enabled: false
   minReplicas: 3
   maxReplicas: 6
   targetCPUUtilizationPercentage: 80
