Made queue listeners blocking, added consumerWindowSize=0 to disallow message buffering

--- a/src/main/resources/application-docker-worker.yaml
+++ b/src/main/resources/application-docker-worker.yaml
@@ -7,7 +7,7 @@ spring:
     embedded:
       enabled: false
     mode: native
-    broker-url: ${CONTROLLER_BROKER_URI}
+    broker-url: ${CONTROLLER_BROKER_URI}?consumerWindowSize=0
   autoconfigure:
     exclude:
       - org.springframework.boot.autoconfigure.h2.H2ConsoleAutoConfiguration
