--- a/src/main/resources/application-docker-worker.yaml
+++ b/src/main/resources/application-docker-worker.yaml
@@ -8,6 +8,10 @@ spring:
       enabled: false
     mode: native
     broker-url: ${CONTROLLER_BROKER_URI}?consumerWindowSize=0
+  jms:
+    listener:
+      concurrency: 1
+      max-concurrency: 1
   autoconfigure:
     exclude:
       - org.springframework.boot.autoconfigure.h2.H2ConsoleAutoConfiguration
