--- a/.gitignore
+++ b/.gitignore
@@ -24,6 +24,4 @@ application-controller-local.yaml
 application-worker-local.yaml
 application-single-local.yaml
 .factorypath
-create.sql
-curl.sh
-tmp/
+scripts
