--- a/src/deploy/helm/charts/worker/templates/deployment.yaml
+++ b/src/deploy/helm/charts/worker/templates/deployment.yaml
@@ -40,6 +40,20 @@ spec:
               value: {{ include "worker.controller.broker.uri" . }}
           resources:
             {{- toYaml .Values.resources | nindent 12 }}
+          livenessProbe:
+            httpGet:
+              port: 8080
+              path: /actuator/health
+            initialDelaySeconds: 30
+            failureThreshold: 2
+            periodSeconds: 45
+          readinessProbe:
+            httpGet:
+              port: 8080
+              path: /actuator/health
+            initialDelaySeconds: 10
+            failureThreshold: 5
+            periodSeconds: 10
       {{- with .Values.nodeSelector }}
       nodeSelector:
         {{- toYaml . | nindent 8 }}
