excluded oauth2 autoconfiguration for workers

--- a/src/main/resources/application-docker-worker.yaml
+++ b/src/main/resources/application-docker-worker.yaml
@@ -17,3 +17,5 @@ spring:
       - org.springframework.boot.autoconfigure.h2.H2ConsoleAutoConfiguration
       - org.springframework.boot.autoconfigure.jdbc.DataSourceAutoConfiguration
       - org.springframework.boot.autoconfigure.data.jpa.JpaRepositoriesAutoConfiguration
+      - org.springframework.boot.autoconfigure.security.oauth2.client.servlet.OAuth2ClientAutoConfiguration
+      - org.springframework.boot.autoconfigure.security.oauth2.resource.servlet.OAuth2ResourceServerAutoConfiguration
