MOJ-310: added support for system properties

--- a/src/test/resources/assignments/assignment-1/assignment.yaml
+++ b/src/test/resources/assignments/assignment-1/assignment.yaml
@@ -19,6 +19,10 @@ duration: PT30M
 submit-timeout: PT60S
 test-timeout: PT60S
 
+system-properties:
+  "moj.bar": ${base}/assets/images/icon.png
+  foo: bar
+
 scoring-rules:
   maximum-resubmits: 2
   resubmit-penalty: 50%
