Fixed MOJ-319: screen resetting on new players starting in single mode

--- a/pom.xml
+++ b/pom.xml
@@ -241,7 +241,8 @@
         <dependency>
             <groupId>org.webjars.npm</groupId>
             <artifactId>marked</artifactId>
-            <version>4.2.5</version>
+<!--            <version>4.2.5</version>-->
+            <version>9.1.2</version>
         </dependency>
         <dependency>
             <groupId>org.webjars.bower</groupId>
