--- a/src/deploy/docker-compose/all-in-one/docker-compose.yaml
+++ b/src/deploy/docker-compose/all-in-one/docker-compose.yaml
@@ -1,5 +1,22 @@
 version: '2.4'
 services:
+  postgresql:
+    image: postgres:15
+    cpus: 1
+    mem_reservation: 128m
+    mem_limit: 512m
+    restart: unless-stopped
+    ports:
+      - "127.0.0.1:5432:5432"
+    environment:
+      POSTGRES_USER: postgres
+      POSTGRES_PASSWORD: postgres
+      POSTGRES_MULTIPLE_DATABASES: "iam:iam:iam,moj:moj:moj"
+    volumes:
+      - "./scripts:/docker-entrypoint-initdb.d"
+    networks:
+      - moj
+
   auth:
     image: quay.io/keycloak/keycloak:21.1
     cpus: 1
@@ -17,13 +34,20 @@ services:
     environment:
       KEYCLOAK_ADMIN: "keycloak"
       KEYCLOAK_ADMIN_PASSWORD: "keycloak"
+      KC_DB: postgres
+      KC_DB_USERNAME: iam
+      KC_DB_PASSWORD: iam
+      KC_DB_URL: "jdbc:postgresql://postgres:5432/iam"
     volumes:
       - "./realms:/opt/keycloak/data/import"
     networks:
       - moj
+    depends_on:
+      postgresql:
+        condition: service_started
 
   controller:
-    image: docker.first8.nl/moj/moj-controller:17
+    image: your.registry/moj/moj-controller:17
     cpus: 2
     mem_reservation: 1g
     mem_limit: 2g
@@ -33,14 +57,20 @@ services:
       - "61616:61616"
     environment:
       OIDC_ISSUER_URI: "http://host.docker.internal:8888/realms/moj"
+      SPRING_DATASOURCE_URL: "jdbc:postgresql://postgres:5432/moj"
+      SPRING_DATASOURCE_USERNAME: "moj"
+      SPRING_DATASOURCE_PASSWORD: "moj"
+      SPRING_DATASOURCE_DRIVER_CLASS_NAME: "org.postgresql.Driver"
     networks:
       - moj
     depends_on:
+      postgresql:
+        condition: service_started
       auth:
         condition: service_started
 
   worker:
-    image: docker.first8.nl/moj/moj-worker:17
+    image: your.registry/moj/moj-worker:17
     cpus: 3
     mem_reservation: 1g
     mem_limit: 2g
